# jin

./: .gitignore  Cargo.toml  GUIDE.md  Justfile  README.md  TESTING.md  run_all.sh  run_bench.sh
.claude/: audit-report.md
.cursor/rules/: jin.mdc  vicinity.mdc
.github/: settings.yml
.github/workflows/: ci.yml  publish-validation.yml  publish.yml
benches/: distance.rs  hnsw.rs  memory.rs  recall.rs  scaling.rs
data/multiscale/: README.md  all_metrics.json  results_B.json
data/multiscale/B/: metrics.json
data/multiscale/T/: metrics.json
data/sample/: README.md  difficulty_metrics.json
doc/: benchmark-results.md  datasets.md  references.md
doc/plots/: generate_plots.py
docs/: ANN_RESEARCH_2024_2026.md  DOC_AUDIT.md  README_DETAILED.md
examples/: 01_basic_search.rs  02_measure_recall.rs  03_quick_benchmark.rs  04_rigorous_benchmark.rs  05_normalization_matters.rs  README.md  ann_benchmark.rs  dual_branch_demo.rs  dual_branch_hnsw_demo.rs  embedding_pipeline.rs  evoc_demo.rs  glove_benchmark.rs  hnsw_benchmark.rs  hybrid_search.rs  ivf_pq_demo.rs  lid_demo.rs  lid_outlier_detection.rs  lsh_demo.rs  rabitq_demo.rs  retrieve_and_rerank.rs  semantic_search_demo.rs  sift_benchmark.rs  wasm_search.rs
qa/reports/: arch-2026-03-04.md  qa-2026-03-04.md
scripts/: benchmark_analysis.py  download_ann_benchmarks.py  generate_multiscale_data.py  generate_plots.py  generate_sample_data.py  plot_comparison.py  plot_pareto.py
src/: adaptive.rs  clump_compat.rs  distance.rs  error.rs  lib.rs  lid.rs  matryoshka.rs  partitioning.rs  pq_simd.rs  simd.rs  spectral.rs
src/ann/: autotune.rs  factory.rs  mod.rs  traits.rs
src/benchmark/: datasets.rs  evaluation.rs  memory.rs  metrics.rs  mod.rs
src/classic/: mod.rs
src/classic/lsh/: mod.rs  search.rs
src/classic/trees/: annoy.rs  balltree.rs  kdtree.rs  kmeans_tree.rs  mod.rs  random_projection.rs  rp_forest.rs
src/compression/: ans.rs  error.rs  mod.rs  roc.rs  traits.rs
src/diskann/: cache.rs  disk_io.rs  graph.rs  mod.rs
src/evoc/: clustering.rs  hierarchy.rs  mod.rs  reduction.rs
src/filtering/: inline.rs  mod.rs
src/hash/: minhash.rs  mod.rs  search.rs  simhash.rs
src/hnsw/: construction.rs  deg.rs  distance.rs  dual_branch.rs  filtered.rs  fused.rs  graph.rs  incremental.rs  inplace.rs  memory.rs  merge.rs  mod.rs  probabilistic_routing.rs  random_walk_repair.rs  repair.rs  scalar_quantized.rs  search.rs  tombstones.rs  vamana.rs
src/ivf_pq/: mod.rs  online_pq.rs  opq.rs  pq.rs  search.rs
src/nsw/: construction.rs  graph.rs  mod.rs  search.rs
src/partitioning/: kmeans.rs
src/persistence/: blob_store.rs  checkpoint.rs  codec.rs  dense.rs  directory.rs  error.rs  format.rs  hnsw.rs  ivf_pq.rs  locking.rs  mod.rs  recovery.rs  segment.rs  wal.rs
src/quantization/: mod.rs  rabitq.rs  saq.rs  simd_ops.rs  ternary.rs  turboquant.rs
src/scann/: mod.rs  partitioning.rs  quantization.rs  reranking.rs  search.rs
src/sng/: alpha_pruning.rs  construction.rs  graph.rs  martingale.rs  mod.rs  optimization.rs  search.rs
src/streaming/: buffer.rs  coordinator.rs  mod.rs  ops.rs
src/vamana/: construction.rs  graph.rs  mod.rs  search.rs
tests/: chaos_persistence.rs  cross_algorithm_consistency.rs  cross_crate_integration.rs  diskann_persistence_test.rs  distributed_locking.rs  edge_cases.rs  eval_e2e.rs  hnsw_e2e.rs  hnsw_integration_tests.rs  integration_idpaq.rs  invariants.rs  opq_vs_pq.rs  persistence_robustness.rs  property_tests.proptest-regressions  property_tests.rs  regression_known_bugs.rs  robustness.rs
