[package]
name = "vicinity"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
description = "Approximate Nearest Neighbor Search: HNSW, DiskANN, IVF-PQ, ScaNN, quantization"
repository = "https://github.com/arclabs561/vicinity"
license = "MIT OR Apache-2.0"
keywords = ["ann", "hnsw", "vector-search", "similarity", "nearest-neighbor"]
categories = ["algorithms", "science"]

[dependencies]
smallvec = { version = "1.11", features = ["serde"] }
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bitflags = "2.4"
ordered-float = "4.2"
parking_lot = "0.12"
rayon = "1.10"
thiserror = "2.0"
log = "0.4"

# SIMD primitives (ecosystem crate)
innr = { git = "https://github.com/arclabs561/innr.git", optional = true }

# ID compression primitives (ecosystem crate)
idpaq = { git = "https://github.com/arclabs561/idpaq.git", optional = true }

# Persistence & IO
byteorder = "1.5"
crc32fast = "1.4"
libc = "0.2"
hex = "0.4"
fst = "0.4"
memmap2 = { version = "0.9", optional = true }
postcard = { version = "1.0", optional = true, features = ["use-crc", "alloc"] }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }

# Compression
constriction = { version = "0.4", optional = true }

# Legacy serialization (kept for backward compatibility)
bincode = { version = "1.3", optional = true }

[features]
default = ["hnsw", "innr"]
persistence = ["dep:postcard", "dep:bytemuck", "dep:memmap2", "dep:constriction"]
hnsw = []
ivf_pq = []
diskann = []
scann = []
sng = []
vamana = []
quantization = []
nightly = []
innr = ["dep:innr"]

# Feature names referenced by cfgs in the extracted code.
# These are currently mostly organizational toggles.
dense = []
nsw = []
kdtree = []
balltree = []
kmeans_tree = []
rptree = []
lsh = []
annoy = []
evoc = []

id-compression = ["dep:idpaq"]
persistence-bincode = ["dep:bincode", "persistence"]
memmap = ["persistence"]  # Alias for persistence with mmap focus

# Quantization sub-features (kept separate so callers can be explicit)
rabitq = []
saq = []
turboquant = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3"

[[bench]]
name = "hnsw"
harness = false

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "recall"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "scaling"
harness = false

# Examples with feature requirements
[[example]]
name = "lsh_demo"
required-features = ["lsh"]

[[example]]
name = "rabitq_demo"
required-features = ["rabitq"]

[[example]]
name = "ivf_pq_demo"
required-features = ["ivf_pq"]

[profile.release]
lto = "thin"
codegen-units = 1
debug = 1  # Enable symbols for profiling (flamegraph, perf)

[profile.bench]
lto = "thin"
codegen-units = 1
debug = 1

# Maximum optimization for production (no debug symbols)
[profile.release-optimized]
inherits = "release"
lto = "fat"
panic = "abort"
strip = true
debug = false

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
# Allow cfg checks for internal feature toggles (classic ANN algorithms and optional data formats)
unexpected_cfgs = { level = "warn", check-cfg = [
    "cfg(feature, values(\"nsw\", \"kdtree\", \"balltree\", \"kmeans_tree\", \"rptree\", \"lsh\", \"annoy\", \"simd\", \"rand\", \"hdf5\"))"
] }
# Documentation lints: temporarily relaxed, enable incrementally
# missing_docs = "warn"
# missing_doc_code_examples = "warn"
# unsafe_code = "warn"  # SIMD and low-level ops require unsafe
unstable_features = "deny"
unused_import_braces = "warn"
# unused_qualifications = "warn"  # Relaxed: explicit paths often improve clarity
# unused_results = "warn"  # Relaxed: HashSet/HashMap inserts often ignore return value
# trivial_numeric_casts = "warn"  # Relaxed: explicit casts help with type clarity
variant_size_differences = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
semicolon_in_expressions_from_macros = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_macro_rules = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }
unwrap_in_result = "warn"
unwrap_used = "warn"
expect_used = "warn"
mutex_atomic = "warn"
large_enum_variant = "warn"
empty_loop = "deny"
never_loop = "warn"
doc_markdown = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
multiple_crate_versions = "allow"
wrong_self_convention = "allow"
module_name_repetitions = "allow"
