[package]
name = "vicinity"
version = "0.1.3"
authors = ["Arc <attobop@gmail.com>"]
edition = "2021"
rust-version = "1.80"
description = "Approximate Nearest Neighbor Search: HNSW, DiskANN, IVF-PQ, ScaNN, quantization"
repository = "https://github.com/arclabs561/vicinity"
license = "MIT OR Apache-2.0"
keywords = ["ann", "hnsw", "vector-search", "similarity", "nearest-neighbor"]
categories = ["algorithms", "science"]

[lib]
# Pure rlib for normal Rust usage.
# PyO3 cdylib is built by maturin (sets PYO3_BUILD_EXTENSION_MODULE=1).
crate-type = ["rlib"]

[dependencies]
smallvec = "1.11"
rand = "0.9"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"

# Python bindings (feature-gated; used for ann-benchmarks integration)
# Note: do NOT enable `pyo3/extension-module` here. It breaks `cargo test --all-features`
# by disabling libpython linking for test binaries on macOS.
# Maturin sets `PYO3_BUILD_EXTENSION_MODULE=1` when building wheels.
pyo3 = { version = "0.27.2", optional = true }
numpy = { version = "0.27.0", optional = true }

# SIMD primitives (ecosystem crate)
innr = { version = "0.1.9", optional = true }

# High-performance SIMD (ashvardanian/SimSIMD bindings)
# Provides up to 200x speedups for vector distance functions
simsimd = { version = "6.5.12", optional = true }

# ID compression primitives (ecosystem crate)
cnk = { version = "0.1.3", optional = true }

# Succinct data structures (ecosystem crate)
sbits = { version = "0.1.1", optional = true }

# Hierarchical clustering (EVōC)
clump = { version = "0.4.2", optional = true }

# Spectral statistics (optional).
rmt = { version = "0.1.2", optional = true }

# Vector quantization primitives (extracted from `vicinity`)
qntz = { package = "qntz", version = "0.1.1", optional = true }

# Persistence & IO (all optional, gated behind `persistence`)
byteorder = { version = "1.5", optional = true }
crc32fast = { version = "1.4", optional = true }
libc = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
fst = { version = "0.4", optional = true }
memmap2 = { version = "0.9", optional = true }
postcard = { version = "1.0", optional = true, features = ["use-crc", "alloc", "use-std"] }
bytemuck = { version = "1.14", optional = true, features = ["derive"] }
durability = { version = "0.1.1", optional = true }

# Legacy serialization (kept for backward compatibility)
bincode = { version = "1.3", optional = true }

[features]
default = ["hnsw", "innr"]
persistence = [
    "dep:serde", "dep:serde_json", "smallvec/serde",
    "dep:postcard", "dep:bytemuck", "dep:memmap2", "dep:durability",
    "dep:byteorder", "dep:crc32fast", "dep:libc",
    "dep:hex", "dep:fst",
]
hnsw = []
ivf_pq = ["dep:clump", "dep:serde", "dep:serde_json", "smallvec/serde"]
diskann = ["dep:serde_json"]
scann = ["dep:clump"]
sng = []
vamana = ["hnsw"]
quantization = ["qntz"]
nightly = []
innr = ["dep:innr"]
simsimd = ["dep:simsimd"]
python = ["dep:pyo3", "dep:numpy", "hnsw"]

# Feature names referenced by cfgs in the extracted code.
# These are currently mostly organizational toggles.
nsw = []
kdtree = []
balltree = []
kmeans_tree = []
rptree = []
rmt-spectral = ["dep:rmt"]
evoc = ["dep:clump"]

id-compression = ["dep:cnk", "dep:sbits", "cnk/sbits"]
persistence-bincode = ["dep:bincode", "persistence"]
memmap = ["persistence"]

# Quantization sub-features (kept separate so callers can be explicit)
rabitq = ["qntz", "qntz/rabitq"]
saq = ["qntz", "qntz/ternary"]
# Re-exported quantizers (from `qntz`)
qntz = ["dep:qntz"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.5"
tempfile = "3"
memmap2 = "0.9"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread"] }
anyhow = "1.0"
rankops = "0.1.3"

[[example]]
name = "ivf_pq_demo"
path = "examples/ivf_pq_demo.rs"
required-features = ["ivf_pq"]

[[example]]
name = "rabitq_demo"
path = "examples/rabitq_demo.rs"
required-features = ["rabitq", "hnsw", "quantization"]

[[example]]
name = "evoc_demo"
path = "examples/evoc_demo.rs"
required-features = ["evoc"]

[[example]]
name = "sift_benchmark"
path = "examples/sift_benchmark.rs"
required-features = ["hnsw"]

[[example]]
name = "retrieve_and_rerank"
path = "examples/retrieve_and_rerank.rs"
required-features = ["hnsw"]

[[bench]]
name = "hnsw"
harness = false

[[bench]]
name = "distance"
harness = false

[[bench]]
name = "recall"
harness = false

[[bench]]
name = "memory"
harness = false

[[bench]]
name = "scaling"
harness = false

# [[bench]]
# name = "hnsw_adaptive"
# harness = false

[lints.rust]
rust_2018_idioms = { level = "warn", priority = -1 }
rust_2021_compatibility = { level = "warn", priority = -1 }
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
# Let Cargo auto-infer feature values from [features] table.
# Only list non-feature cfgs here (e.g. target-specific).
unexpected_cfgs = "warn"
# Documentation lints: temporarily relaxed, enable incrementally
# missing_docs = "warn"
# missing_doc_code_examples = "warn"
# unsafe_code = "warn"  # SIMD and low-level ops require unsafe
unstable_features = "deny"
unused_import_braces = "warn"
# unused_qualifications = "warn"  # Relaxed: explicit paths often improve clarity
# unused_results = "warn"  # Relaxed: HashSet/HashMap inserts often ignore return value
# trivial_numeric_casts = "warn"  # Relaxed: explicit casts help with type clarity
variant_size_differences = "warn"
unused_extern_crates = "warn"
unused_lifetimes = "warn"
semicolon_in_expressions_from_macros = "warn"
unsafe_op_in_unsafe_fn = "warn"
unused_macro_rules = "warn"

[lints.clippy]
correctness = { level = "deny", priority = -1 }
perf = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "allow", priority = -1 }
unwrap_in_result = "warn"
unwrap_used = "warn"
expect_used = "warn"
mutex_atomic = "warn"
large_enum_variant = "warn"
empty_loop = "deny"
never_loop = "warn"
doc_markdown = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
multiple_crate_versions = "allow"
wrong_self_convention = "allow"
module_name_repetitions = "allow"
